# CppChallenge

./: .clang-format  .gitignore  .pre-commit-config.yaml  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BUILD  CMakeLists.txt  Challenge.h  CommandManager.cpp  CommandManager.h  Configuration.h  Constant.h  CppChallenge.sln  CppChallenge.vcxproj  CppChallenge.vcxproj.filters  DesafioCpp  IOStorage.h  Importer.cpp  Importer.h  Makefile  README.md  SATImport.cpp  SATImport.h  School.h  SchoolData.cpp  SchoolData.h  SchoolDataRepository.cpp  SchoolDataRepository.h  TODO.md  UserGuide.txt  WORKSPACE  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  generalStructs.h  main.cpp  makefile  readExcel.cpp  readExcel.h  runChallenge.sh  school.cpp  (+5 more)
app/: BUILD  CMakeLists.txt  main.cpp  main_methods.cpp  main_methods.h
app/include/: Controller.hpp  Database.hpp  DatabaseRecord.hpp  View.hpp
app/main/: main.cpp
app/src/: Controller.cpp  Database.cpp  DatabaseRecord.cpp  View.cpp
app/test/: Database_test.cpp  testFile.csv
app/tests/: CMakeLists.txt  main_test.cpp
college_data/: CMakeLists.txt
college_data/include/: college_data.h
college_data/include/college_data/: data_analysis.h  data_classes.h  data_storage.h  school.h
college_data/src/: data_analysis.cpp  data_storage.cpp
college_data/tests/: CMakeLists.txt  college_data_lib_test.cpp  data_analysis_test.cpp  data_storage_test.cpp
helper/: file.h  string.h  vector.h
inc/: Application.h  FileIO.h  FileReader.h  FileWriter.h  SATResultsManager.h  UI.h
include/: .add.h.swp  App.h  Application.h  CLI.hpp  CSVParser.h  CSVReader.h  Cli.h  Controller.h  CsvEntries.hpp  CsvParser.h  CsvReader.h  Database.hpp  Entry.hpp  FileIO.h  FileReader.h  FileUtils.hpp  FileWriter.h  ICSVParser.h  IMenu.h  IPrinter.h  MainMenu.hpp  Menu.h  Parser.hpp  Printer.h  Reader.h  Record.h  RecordsData.h  ResultData.h  ResultsContainer.h  SATResultsManager.h  SatDatabase.h  SatReader.h  SatResult.h  SchoolData.hpp  SchoolDataMap.hpp  SchoolResult.h  SchoolResultDatabase.h  SchoolSatResult.h  SchoolTestResult.h  UI.h  (+29 more)
input/: file.csv
libs/ui/: ui.cpp  ui.h
main/: BUILD  application.cpp  application.hpp  csv_parser.cpp  csv_parser.hpp  level_results.cpp  level_results.hpp  main.cpp
output/: SavedSchools.csv  output_example.csv  report.csv  searchBySchoolName_NEW.csv  test.txt
presentation/: menu.h
scripts/: build.sh  run.sh  test.sh
src/: App.cpp  Application.cpp  CSVParser.cpp  CSVReader.cpp  Cli.cpp  Controller.cpp  CsvEntries.cpp  CsvParser.cpp  CsvReader.cpp  Entry.cpp  FileIO.cpp  FileReader.cpp  FileWriter.cpp  MainMenu.cpp  Menu.cpp  Printer.cpp  RecordsData.cpp  ResultData.cpp  ResultsContainer.cpp  SATResultsManager.cpp  SatDatabase.cpp  SatReader.cpp  SatResult.cpp  SchoolData.cpp  SchoolDataMap.cpp  SchoolResultDatabase.cpp  SchoolSatResult.h  UI.cpp  Ui.cpp  cli.cpp  college.cpp  college_database.cpp  console.cpp  core.cpp  core.h  csv.cpp  csvParser.cpp  csv_file.cpp  csvfile.cpp  csvfile.h  (+37 more)
test/: CMakeLists.txt  TestCppChallenge.cpp  TestDatabase.cpp  TestFileUtils.cpp  dataentrytest.cpp  dataprocessortest.cpp  datareadertest.cpp  datawritertest.cpp  main_test.cpp  nameprocessortest.cpp  tests.cpp
test/unit/: testSearchBtDbn.cpp  testSearchByName.cpp
tests/: BUILD  CMakeLists.txt  CSVParserTest.cpp  MenuTest.cpp  PrinterTest.cpp  main.cpp  searchtest.cpp  searchtest.h
tests/college_database_tests/: CMakeLists.txt  college_database_tests.cpp  data_nok.csv  data_ok.csv
tests/csv_file_tests/: CMakeLists.txt  csv_file_tests.cpp  data.csv
utils/: launch.json  tasks.json
